Refactor The actual implementation of the logics.